todo-app/network-policy/api-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-egress-network-policy
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: api
  egress: []
  policyTypes:
  - Egress
