todo-app/network-policy/db-egress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-egress-network-policy
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: db
  egress: []
  policyTypes:
  - Egress
