todo-app/network-policy/db-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-ingress-network-policy
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:
  - ports:
    - port: 3306
    from:
    - podSelector:
        matchLabels:
          app: api
