todo-app/network-policy/ui-ingress-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-ingress-network-policy
  namespace: todo-app
spec:
  podSelector:
    matchLabels:
      app: ui
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
      - port: 80
        protocol: TCP
